fix: sidebar tab/toggle opacity system, fix transition delay bleed

--- a/src/features/_custom-svg.scss
+++ b/src/features/_custom-svg.scss
@@ -15,13 +15,6 @@
    https://yoksel.github.io/url-encoder/
 */
 
-/* Obsidian MOD :: Remove shadow  */
-.mod-left-split .workspace-tab-header.has-active-menu,
-.mod-right-split .workspace-tab-header.has-active-menu,
-.mod-left-split .workspace-tab-header.is-active,
-.mod-right-split .workspace-tab-header.is-active {
-  background-color: unset;
-}
 
 /* Obsidian CORE :: File Explorer */
 .workspace-tab-header[aria-label="Files"] .workspace-tab-header-inner-icon svg {
